<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.javiermolina.bikerbox.Activities.DatosRegistroUsuario"
    android:orientation="vertical"
    android:background="#ffffff">

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/nombre"
        android:layout_marginTop="40dp"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/edtApellidos"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/apellidos"
        android:layout_marginTop="20dp"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/edtContrasena"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/contrasena"
        android:layout_marginTop="20dp"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edtLocalidad"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/localidad"
        android:layout_marginTop="20dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#388186"
        android:text="@string/continuar"
        android:textColor="#ffffff"
        android:imeOptions="actionDone"
        android:layout_marginTop="20dp"/>

</LinearLayout>
