<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.javiermolina.bikerbox.Activities.UsuarioModificarMoto"
    android:background="#ffffff">

    <EditText
        android:id="@+id/edtModificarMarcaMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/marca"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edtModificarModeloMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/modelo"
        android:layout_marginTop="10dp"
        android:imeOptions="actionDone"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtModificarMatriculaMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/matricula"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtModificarColorMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/color"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtModificarKmMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Km"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtModificarCilindradaMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/cilindrada"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtModificarAnoMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/ano"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"/>
    <Spinner
        android:id="@+id/spModificarEstiloMoto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

    </Spinner>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnModifcarImagen"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:clickable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="subir imagen"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#388186"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btnModificarContinuarMoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#388186"
        android:text="@string/continuar"
        android:textColor="#ffffff"
        android:imeOptions="actionDone"
        android:layout_marginTop="20dp"/>
</LinearLayout>
