<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.javiermolina.bikerbox.Activities.AnadirMoto"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <EditText
        android:id="@+id/edtAnadirMarcaMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/marca"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edtAnadirModeloMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/modelo"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtAnadirMatriculaMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/matricula"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtAnadirColorMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/color"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edtAnadirKmMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Km"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edtAnadirCilindradaMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/cilindrada"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="number"/>
    <EditText

        android:id="@+id/edtAnadirAnoMoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/ano"
        android:layout_marginTop="10dp"
        android:imeOptions="actionDone"
        android:inputType="number"/>
        <Spinner
            android:id="@+id/spAnadirEstiloMoto"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal">

        </Spinner>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnSubirImagen"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:clickable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="subir imagen"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#388186"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btnAnadirContinuarMoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#388186"
        android:text="@string/continuar"
        android:textColor="#ffffff"
        android:imeOptions="actionDone"
        android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>
