<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.javiermolina.bikerbox.Activities.PerfilTaller"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardImgTaller"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_logo_ducati_service"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edtNombreTallerModificar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:maxLines="1"
        android:inputType="text"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edtDescripcionTallerModificacion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnGuardarTaller"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#388186"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/guardar"
        android:textColor="#ffffff"/>
    </LinearLayout>
</ScrollView>
